# bw2keepass

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: build-apk.yml  deploy-pages.yml  test.yml
app/: .gitignore  README.md  build-apk-local.sh
app/src/main/: AndroidManifest.xml
app/src/main/assets/: debug-test.html  engine.js  index.html  sw.js
app/src/main/java/cc/valk/pass2kdbx/: MainActivity.java
app/src/main/res/drawable/: ic_launcher.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml
app/src/main/res/mipmap/: ic_launcher.xml
app/src/main/res/values/: styles.xml
bw_to_keepass/: __init__.py  __main__.py  convert.py  converter.py  csv_exporter.py  encrypted.py  onepassword.py  parser.py  reverse_converter.py  reverse_to_1password.py  writer.py
tests/: roundtrip_compare.py  test_convert.py  test_converter.py  test_fidelity.py  test_matrix.py  test_onepassword.py
tests/fixtures/: sample_export.json
web/: CNAME  debug-test.html  engine.js  index.html  manifest.json  sw.js  test_chrome.csv
